# localchat

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
Scripts/: localchat.cmd
accdb/: _AccountDB.py  _AccountImplF.py  _UserCertificateDBEntryImplF.py  __init__.py  _base.py  _implBase.py
argon2_cffi_PasswordHashProvider/: __init__.py  _impl.py
docs/: ARCHITEKTUR.md  IDEEN.md  PROTOKOLL.md  StrukturByL.md  TESTS.md
localchat/: __init__.py  __main__.py  installer_windows.py
localchat.egg-info/: PKG-INFO  SOURCES.txt
localchat/client/: __init__.py  client.py  client_interface.py  discovery.py  handlers.py
localchat/config/: __init__.py  colors.py  defaults.py  limits.py
localchat/core/: network.py  package.py  protocol.py  storage.py  test_package.py  utils.py
localchat/event/: EventHandler.py  EventListener.py
localchat/net/: CSM25122901.py  ChatSerializationMethod.py  MagicNumber.py  Serializable.py  SerializableChat.py  SerializableChatInformation.py  SerializableFloat.py  SerializableList.py  SerializableString.py  SerializableUUID.py  SerializableUser.py  SerializableUserMessage.py  SerializableUserMessageList.py  TestSerializable.py  __init__.py  exact.py  tcp_protocol.py
localchat/server/: broadcast.py  commands.py  server.py  server_interface.py
localchat/settings/: __init__.py  model.py  store.py  validators.py
localchat/typing/: AnyIOBase.py  __init__.py
localchat/util/: BinaryIOBase.py  Chat.py  ChatInformation.py  Role.py  User.py  (+2 more)
localcom/: __main__.py
passwordFramwork/: __init__.py  _base.py
test/: __init__.py
(+78 files in other folders)
